--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,7 @@
         {% endblock %}
     </head>
     <body>
+        <a href="{{ path('app_index') }}" title="Accueil">Télé-Loisirs</a>
         {% block body %}{% endblock %}
     </body>
 </html>
