Add colored borders to blocks

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
         {% endblock %}
     </head>
     <body>
-        <a href="{{ path('app_index') }}" title="Accueil">Télé-Loisirs</a>
+        <h2><a href="{{ path('app_index') }}" title="Accueil">Télé-Loisirs</a></h2>
         {% block body %}{% endblock %}
     </body>
 </html>
