--- a/templates/blocks/LastArticles.html.twig
+++ b/templates/blocks/LastArticles.html.twig
@@ -1,10 +1,12 @@
-<h3>Dernières actus</h3>
-<ul>
-    {% for article in LastArticles.articles %}
-        <li>
+<section style="border: green dotted 10px;padding: 30px;margin: 30px;">
+    <h3>Dernières actus</h3>
+    <ul>
+        {% for article in LastArticles.articles %}
+            <li>
                 <a href="{{ path('app_article', { id: article.id }) }}">
                     {{ article.title }}
                 </a>
-        </li>
-    {% endfor %}
-</ul>
+            </li>
+        {% endfor %}
+    </ul>
+</section>
